--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
               token: ${{ secrets.CODECOV_TOKEN }}
-              slug: atbore-phx/ha-fronius-bm
+              slug: atbore-phx/sbam
