--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,37 +11,80 @@ permissions:
   id-token: write
 
 jobs:
-  release:
+  release-ha:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        goarch:
+          - amd64
+          - 386
+          - arm64
+          - arm
+        goos:
+         - linux
+        include:
+          - goarch: amd64
+            haarch: amd64
+          - goarch: 386
+            haarch: i386
+          - goarch: arm64
+            haarch: aarch64
+          - goarch: arm
+            haarch: armv7
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Set up Go
         uses: actions/setup-go@v4
-      - name: Run GoReleaser
+
+      - name: GoReleaser Install
         uses: goreleaser/goreleaser-action@v5
         with:
-          distribution: goreleaser
-          version: latest
-          args: release --clean
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      - name: copy binary to local ha folder
+          install-only: true
+
+      - name: GoReleaser Build ${{matrix.goos}}, ${{matrix.goarch}}
         run: |
-          mkdir home-assistant/addons/sbam/bin/
-          cp -v dist/sbam_linux_amd64_v1/bin/sbam home-assistant/addons/sbam/bin/
+          mkdir home-assistant/addons/sbam/bin
+          goreleaser build --clean --single-target --output home-assistant/addons/sbam/bin/sbam
+        env:
+          GOOS: ${{matrix.goos}}
+          GOARCH: ${{matrix.goarch}}
+          GOARM: 7
+          CGO_ENABLED: 0
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish build - Home Assistant builder
+      - name: Publish build - Home Assistant builder ${{matrix.goos }}, $${{matrix.haarch}}
         uses: home-assistant/builder@2024.01.0
         with:
           args: |
-            --amd64 \
+            --${{matrix.haarch}} \
             --target /data/home-assistant/addons/sbam \
             --addon
+
+  release-os:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
