--- a/home-assistant/addons/sbam/config.json
+++ b/home-assistant/addons/sbam/config.json
@@ -3,7 +3,7 @@
   "version": "1.3.1",
   "slug": "sbam",
   "init": "false",
-  "description": "Smart Battery Avanced Manager",
+  "description": "Smart Battery Advanced Manager",
   "arch": [
     "amd64",
     "i386",
