feat(ci): updating workflow  (#29)
* feat(ci): updating github actions to latest

* feat(ci): updating home assistant base build to latest

* feat(ci): setting addon version automatically from release tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           - arm64
           - arm
         goos:
-         - linux
+          - linux
         include:
           - goarch: amd64
             haarch: amd64
@@ -38,11 +38,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Get version from github Tag
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" | tee -a $GITHUB_ENV
+
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
 
       - name: GoReleaser Install
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         with:
           install-only: true
 
@@ -62,13 +65,15 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Publish build - Home Assistant builder ${{matrix.goos }}, $${{matrix.haarch}}
-        uses: home-assistant/builder@2024.03.5
+        uses: home-assistant/builder@2024.08.2
         with:
           args: |
             --${{matrix.haarch}} \
             --target /data/home-assistant/addons/sbam \
-            --addon
+            --addon \
+            --version ${{ env.VERSION }}
 
   release-os:
     runs-on: ubuntu-latest
@@ -79,10 +84,10 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
 
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         with:
           version: latest
           args: release --clean
