--- a/home-assistant/addons/sbam/config.json
+++ b/home-assistant/addons/sbam/config.json
@@ -1,5 +1,6 @@
 {
   "name": "sbam",
+  "version": "1.3.7",
   "slug": "sbam",
   "init": "false",
   "description": "Smart Battery Advanced Manager",
