--- a/home-assistant/addons/sbam/config.json
+++ b/home-assistant/addons/sbam/config.json
@@ -1,15 +1,10 @@
 {
   "name": "sbam",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "slug": "sbam",
   "init": "false",
   "description": "Smart Battery Advanced Manager",
-  "arch": [
-    "amd64",
-    "i386",
-    "armv7",
-    "aarch64"
-  ],
+  "arch": ["amd64", "i386", "armv7", "aarch64"],
   "url": "https://github.com/atbore-phx/sbam",
   "image": "ghcr.io/atbore-phx/ha-{arch}-sbam",
   "options": {
@@ -30,7 +25,7 @@
     "fronius_ip": "match(^((25[0-5]|(2[0-4]|1\\d|[1-9]|)\\d)(\\.(?!$)|$)){4}$)",
     "start_hr": "match(^([01]?[0-9]|2[0-3]):[0-5][0-9]$)",
     "end_hr": "match(^([01]?[0-9]|2[0-3]):[0-5][0-9]$)",
-    "crontab": "match(^((((\\d+,)+\\d+|(\\d+(\/|-|#)\\d+)|\\d+L?|\\*(\/\\d+)?|L(-\\d+)?|\\?|[A-Z]{3}(-[A-Z]{3})?) ?){5,7})|(@(annually|yearly|monthly|weekly|daily|hourly|reboot))|(@every (\\d+(ns|us|µs|ms|s|m|h))+)$)",
+    "crontab": "match(^((((\\d+,)+\\d+|(\\d+(/|-|#)\\d+)|\\d+L?|\\*(/\\d+)?|L(-\\d+)?|\\?|[A-Z]{3}(-[A-Z]{3})?) ?){5,7})|(@(annually|yearly|monthly|weekly|daily|hourly|reboot))|(@every (\\d+(ns|us|µs|ms|s|m|h))+)$)",
     "pw_consumption": "float",
     "max_charge": "float",
     "pw_batt_reserve": "float",
