--- a/home-assistant/addons/sbam/config.json
+++ b/home-assistant/addons/sbam/config.json
@@ -1,6 +1,6 @@
 {
   "name": "sbam",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "slug": "sbam",
   "init": "false",
   "description": "Smart Battery Advanced Manager",
@@ -17,7 +17,9 @@
     "pw_consumption": "11000",
     "max_charge": "3500",
     "pw_batt_reserve": "4000",
-    "defaults": "true"
+    "defaults": true,
+    "reset": false,
+    "debug": false
   },
   "schema": {
     "url": "str",
@@ -29,6 +31,8 @@
     "pw_consumption": "float",
     "max_charge": "float",
     "pw_batt_reserve": "float",
-    "defaults": "bool"
+    "defaults": "bool",
+    "reset": "bool",
+    "debug": "bool"
   }
 }
