--- a/home-assistant/addons/sbam/config.json
+++ b/home-assistant/addons/sbam/config.json
@@ -17,6 +17,8 @@
     "pw_consumption": "11000",
     "max_charge": "3500",
     "pw_batt_reserve": "4000",
+    "batt_reserve_start_hr": "",
+    "batt_reserve_end_hr": "",
     "defaults": true,
     "reset": false,
     "debug": false
@@ -31,6 +33,8 @@
     "pw_consumption": "float",
     "max_charge": "float",
     "pw_batt_reserve": "float",
+    "batt_reserve_start_hr": "match(^([01]?[0-9]|2[0-3]):[0-5][0-9]$)",
+    "batt_reserve_end_hr": "match(^([01]?[0-9]|2[0-3]):[0-5][0-9]$)",
     "defaults": "bool",
     "reset": "bool",
     "debug": "bool"
