--- a/home-assistant/addons/sbam/config.json
+++ b/home-assistant/addons/sbam/config.json
@@ -1,6 +1,6 @@
 {
   "name": "sbam",
-  "version": "1.3.9",
+  "version": "1.4.0",
   "slug": "sbam",
   "init": "false",
   "description": "Smart Battery Advanced Manager",
@@ -16,7 +16,11 @@
     "crontab": "00 00-05 * * *",
     "pw_consumption": "11000",
     "max_charge": "3500",
+    "pw_lwt": "0",
+    "pw_upt": "0",
     "pw_batt_reserve": "4000",
+    "batt_reserve_start_hr": "",
+    "batt_reserve_end_hr": "",
     "defaults": true,
     "reset": false,
     "debug": false
@@ -30,7 +34,11 @@
     "crontab": "match(^((((\\d+,)+\\d+|(\\d+(\/|-|#)\\d+)|\\d+L?|\\*(\/\\d+)?|L(-\\d+)?|\\?|[A-Z]{3}(-[A-Z]{3})?) ?){5,7})|(@(annually|yearly|monthly|weekly|daily|hourly|reboot))|(@every (\\d+(ns|us|µs|ms|s|m|h))+)$)",
     "pw_consumption": "float",
     "max_charge": "float",
+    "pw_lwt": "float",
+    "pw_upt": "float",
     "pw_batt_reserve": "float",
+    "batt_reserve_start_hr": "match(^$|^([01]?[0-9]|2[0-3]):[0-5][0-9]$)",
+    "batt_reserve_end_hr": "match(^$|^([01]?[0-9]|2[0-3]):[0-5][0-9]$)",
     "defaults": "bool",
     "reset": "bool",
     "debug": "bool"
