--- a/home-assistant/addons/sbam/config.json
+++ b/home-assistant/addons/sbam/config.json
@@ -23,7 +23,10 @@
     "batt_reserve_end_hr": "",
     "defaults": true,
     "reset": false,
-    "debug": false
+    "debug": false,
+    "cache_forecast": false,
+    "cache_time": 7200,
+    "cache_file": "forecast_cache.json"
   },
   "schema": {
     "url": "str",
@@ -41,6 +44,9 @@
     "batt_reserve_end_hr": "match(^$|^([01]?[0-9]|2[0-3]):[0-5][0-9]$)",
     "defaults": "bool",
     "reset": "bool",
-    "debug": "bool"
+    "debug": "bool",
+    "cache_forecast": "bool",
+    "cache_time": int,
+    "cache_file": "string"
   }
 }
