Fix declaration of cache_time type in HA config.json

--- a/home-assistant/addons/sbam/config.json
+++ b/home-assistant/addons/sbam/config.json
@@ -46,7 +46,7 @@
     "reset": "bool",
     "debug": "bool",
     "cache_forecast": "bool",
-    "cache_time": int,
+    "cache_time": "int",
     "cache_file": "string"
   }
 }
