Move the caching logic to the handler in pkg/power/handler  - This allows all URL's to be cached if more than 1 URL is specified  - Alter the cache_file_name to cache_file_prefix. The URL index is added to the    prefix to produce the actual cache_file_name. The default is cached_forecast, resulting    in a cache file of cached_fiecast.0 for the first cache file.

--- a/home-assistant/addons/sbam/config.json
+++ b/home-assistant/addons/sbam/config.json
@@ -26,7 +26,7 @@
     "debug": false,
     "cache_forecast": false,
     "cache_time": 7200,
-    "cache_file_name": "forecast_cache.json"
+    "cache_file_prefix": "cached_forecast"
   },
   "schema": {
     "url": "str",
@@ -47,6 +47,6 @@
     "debug": "bool",
     "cache_forecast": "bool",
     "cache_time": "int",
-    "cache_file_name": "string"
+    "cache_file_prefix": "string"
   }
 }
