--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ home-assistant/addons/sbam/bin/
 # Test binary, built with `go test -c`
 *.test
 **/gotest*.json
+**/gotest*.json.*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
