--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ bin/
 home-assistant/addons/sbam/bin/
 # Test binary, built with `go test -c`
 *.test
+**/gotest*.json
+**/gotest*.json.*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
